--- a/_toc.yml
+++ b/_toc.yml
@@ -4,3 +4,4 @@ parts:
   - caption: Introduction
     chapters:
       - file: notebooks/notebook-template
+      - file: notebooks/my-cmip-notebook
