--- a/.github/workflows/template-sync.yaml
+++ b/.github/workflows/template-sync.yaml
@@ -16,4 +16,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           source_repo_path: ProjectPythia/cookbook-template
-          git_remote_pull_params: --allow-unrelated-histories --squash --strategy=resolve
+          git_remote_pull_params: --strategy=ort -X ours
